deploy/platform-2220-cluster/applications/wallet-xp/non-prod-2020/1048-atlas/haproxy-kubernetes-ingress/services-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stg-fsn1-atlas-1048-worker-01-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-fsn1-atlas-1048-worker-01-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      - ip: 10.99.11.14
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-fsn1-atlas-1048-worker-02-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-fsn1-atlas-1048-worker-02-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      - ip: 10.99.11.15
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-fsn1-atlas-1048-worker-03-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-fsn1-atlas-1048-worker-03-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      - ip: 10.99.11.16
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-sbg5-atlas-1048-worker-01-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-sbg5-atlas-1048-worker-01-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.5.13
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-sbg5-atlas-1048-worker-02-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-sbg5-atlas-1048-worker-02-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.5.14
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-sbg5-atlas-1048-worker-03-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-sbg5-atlas-1048-worker-03-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.5.15
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-fsn1-atlas-1048-ingress-01-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-fsn1-atlas-1048-ingress-01-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.11.28
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-fsn1-atlas-1048-ingress-02-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-fsn1-atlas-1048-ingress-02-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.11.29
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stg-sbg5-atlas-1048-ingress-01-internal
  namespace: 1048-atlas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: stat
      protocol: TCP
      port: 1024
      targetPort: 1024
    - name: healthz
      protocol: TCP
      port: 1042
      targetPort: 1042
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: stg-sbg5-atlas-1048-ingress-01-internal
  namespace: 1048-atlas
subsets:
  - addresses:
      # To be changed if needed when reinstalling cluster
      - ip: 10.99.5.23
    ports:
      - name: http
        port: 80
        protocol: TCP
      - name: https
        port: 443
        protocol: TCP
      - name: stat
        port: 1024
        protocol: TCP
      - name: healthz
        port: 1042
        protocol: TCP
